Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115369

QWebEngine can not render page content and throw `Fatal error` in console

XMLWordPrintable

    • Windows
    • 037df5c9a (112-based), b42d3c196 (dev), 4d386e067 (6.6), 5cafc1f25 (134-based-refactor), a67a8ac9a (134-based-refactor)

      It just can not render the page, with fatal exception log like

      ## Fatal error in .\../../../../../qtwebengine/src/3rdparty/chromium/v8/src/execution/isolate.cc, line 4452# The Isolate is incompatible with the embedded blob. This is usually caused by incorrect usage of mksnapshot. When generating custom snapshots, embedders must ensure they pass the same flags as during the V8 build process (e.g.: --turbo-instruction-scheduling).####FailureMessage Object: 000000DB5551D290Backtrace:	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC161732E2+270064890]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC15F963FC+268111380]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC15F963A3+268111291]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19760E61+326613113]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19778717+326709551]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC09904F47+59898207]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0A0D3C00+68085272]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC091DB009+52386337]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754FC0+326564312]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754AED+326563077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE187F8+417542672]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE210ED+417577733]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1D037B8F+386213287]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1CE11DD7+383961071]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C853248+377936992]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C851948+377930592]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C83E450+377851496]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C8572B2+377953482]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14423CEC+239331076]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14422918+239326000]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1441B81D+239297077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC144163BD+239275477]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0688A7FE+9064982]	TargetGetStockObject [0x00007FF6C86C29D3+285544]	TargetGetStockObject [0x00007FF6C8E182C7+7976028]	TargetGetStockObject [0x00007FF6C8E180CE+7975523]	TargetGetStockObject [0x00007FF6C8E0F5D2+7939943]	TargetGetStockObject [0x00007FF6C8E0F47E+7939603]	TargetGetStockObject [0x00007FF6C8E0F33E+7939283]	TargetGetStockObject [0x00007FF6C8E0F66E+7940099]	BaseThreadInitThunk [0x00007FFCD7BE7614+20]	RtlUserThreadStart [0x00007FFCD89826B1+33]Received fatal exception EXCEPTION_BREAKPOINTBacktrace:	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1977BAE4+326722812]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19778730+326709576]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC09904F47+59898207]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0A0D3C00+68085272]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC091DB009+52386337]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754FC0+326564312]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754AED+326563077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE187F8+417542672]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE210ED+417577733]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1D037B8F+386213287]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1CE11DD7+383961071]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C853248+377936992]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C851948+377930592]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C83E450+377851496]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C8572B2+377953482]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14423CEC+239331076]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14422918+239326000]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1441B81D+239297077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC144163BD+239275477]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0688A7FE+9064982]	TargetGetStockObject [0x00007FF6C86C29D3+285544]	TargetGetStockObject [0x00007FF6C8E182C7+7976028]	TargetGetStockObject [0x00007FF6C8E180CE+7975523]	TargetGetStockObject [0x00007FF6C8E0F5D2+7939943]	TargetGetStockObject [0x00007FF6C8E0F47E+7939603]	TargetGetStockObject [0x00007FF6C8E0F33E+7939283]	TargetGetStockObject [0x00007FF6C8E0F66E+7940099]	BaseThreadInitThunk [0x00007FFCD7BE7614+20]	RtlUserThreadStart [0x00007FFCD89826B1+33]QUrl("custom://test")[20048:6472:0721/080821.038:INFO:web_contents_delegate_qt.cpp(279)] ProcessGone: 3 (-2147483645)[20048:6472:0721/080821.038:INFO:web_contents_delegate_qt.cpp(279)] ProcessGone: 3 (-2147483645)Compositor returned null texture
      
      ## Fatal error in .\../../../../../qtwebengine/src/3rdparty/chromium/v8/src/execution/isolate.cc, line 4452# The Isolate is incompatible with the embedded blob. This is usually caused by incorrect usage of mksnapshot. When generating custom snapshots, embedders must ensure they pass the same flags as during the V8 build process (e.g.: --turbo-instruction-scheduling).####FailureMessage Object: 000000BA172FD3F0Backtrace:	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC161732E2+270064890]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC15F963FC+268111380]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC15F963A3+268111291]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19760E61+326613113]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19778717+326709551]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC09904F47+59898207]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0A0D3C00+68085272]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC091DB009+52386337]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754FC0+326564312]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754AED+326563077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE187F8+417542672]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE210ED+417577733]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1D037B8F+386213287]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1CE11DD7+383961071]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C853248+377936992]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C851948+377930592]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C83E450+377851496]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C8572B2+377953482]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14423CEC+239331076]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14422918+239326000]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1441B81D+239297077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC144163BD+239275477]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0688A7FE+9064982]	TargetGetStockObject [0x00007FF6C86C29D3+285544]	TargetGetStockObject [0x00007FF6C8E182C7+7976028]	TargetGetStockObject [0x00007FF6C8E180CE+7975523]	TargetGetStockObject [0x00007FF6C8E0F5D2+7939943]	TargetGetStockObject [0x00007FF6C8E0F47E+7939603]	TargetGetStockObject [0x00007FF6C8E0F33E+7939283]	TargetGetStockObject [0x00007FF6C8E0F66E+7940099]	BaseThreadInitThunk [0x00007FFCD7BE7614+20]	RtlUserThreadStart [0x00007FFCD89826B1+33]Received fatal exception EXCEPTION_BREAKPOINTBacktrace:	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1977BAE4+326722812]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19778730+326709576]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC09904F47+59898207]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0A0D3C00+68085272]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC091DB009+52386337]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754FC0+326564312]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC19754AED+326563077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE187F8+417542672]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1EE210ED+417577733]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1D037B8F+386213287]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1CE11DD7+383961071]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C853248+377936992]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C851948+377930592]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C83E450+377851496]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1C8572B2+377953482]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14423CEC+239331076]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC14422918+239326000]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC1441B81D+239297077]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC144163BD+239275477]	QWebEnginePage::setUrlRequestInterceptor [0x00007FFC0688A7FE+9064982]	TargetGetStockObject [0x00007FF6C86C29D3+285544]	TargetGetStockObject [0x00007FF6C8E182C7+7976028]	TargetGetStockObject [0x00007FF6C8E180CE+7975523]	TargetGetStockObject [0x00007FF6C8E0F5D2+7939943]	TargetGetStockObject [0x00007FF6C8E0F47E+7939603]	TargetGetStockObject [0x00007FF6C8E0F33E+7939283]	TargetGetStockObject [0x00007FF6C8E0F66E+7940099]	BaseThreadInitThunk [0x00007FFCD7BE7614+20]	RtlUserThreadStart [0x00007FFCD89826B1+33][20048:6472:0721/080821.664:INFO:web_contents_delegate_qt.cpp(279)] ProcessGone: 3 (-2147483645)[20048:6472:0721/080821.664:INFO:web_contents_delegate_qt.cpp(279)] ProcessGone: 3 (-2147483645) 

       

      check attachment.

       

      the attached example can work before qt6.5.0 ,it must be introduced in qt6.6.0

        1. ab.zip
          13 kB
          yifang xiao
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anualiyas Anu Aliyas
            xiaoyifang yifang xiao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: