[tool][v8] Adapt v8 context snapshot generator for QtWebEngine

- Add missing overrides for QtWebEngine
- Avoid to include GL headers on macOS
- Use a different file name for v8 context snapshot in debug mode so
  that release and debug snapshots can live side-by-side.

Task-number: QTBUG-115369
Change-Id: Ie18290d7157c8f39103edb54c81064abc64c310d
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/683632
Reviewed-by: Michal Klocek <michal.klocek@qt.io>