chromium/third_party/angle/src/libANGLE/renderer/vulkan/vk_cache_utils.cpp
@@ -7373,6 +7373,19 @@ void UpdateDescriptorSetsBuilder::updateWriteDescriptorSet(
     }
 }
 
+VkDescriptorImageInfo *UpdateDescriptorSetsBuilder::allocDescriptorImageInfos(uint32_t count)
+{
+    return mDescriptorImageInfos.allocate(count);
+}
+VkWriteDescriptorSet *UpdateDescriptorSetsBuilder::allocWriteDescriptorSets(uint32_t count)
+{
+    return mWriteDescriptorSets.allocate(count);
+}
+VkBufferView *UpdateDescriptorSetsBuilder::allocBufferViews(uint32_t count)
+{
+    return mBufferViews.allocate(count);
+}
+
 // FramebufferCache implementation.
 void FramebufferCache::destroy(vk::Renderer *renderer)
 {
